# nemo-jupyterlab

./: .gitignore  README.md
jl_config/: README.md  jupyter-lsp-jupyter-server.json
jlx_nemo/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml
jlx_nemo/.github/workflows/: build.yml  check-release.yml
jlx_nemo/jlx_nemo/: __init__.py
jlx_nemo/src/: index.ts  languageUtils.ts
language_server_changes/: README.md  language_server.rs
nemo_kernel/: .gitignore  README.md  hatch_build.py  kernel.json  nemo_kernel.py  pyproject.toml
nemo_kernel/nemo_kernel/: __init__.py  __main__.py  nemo_kernel.py
nemo_kernel/nemo_kernel/utility/: code_utils.py  result_utils.py
